# sql_scribe

./: README.md  pyproject.toml  sql_scribe.py
config/: envirnoments.yaml  environment.json  excel_config.yaml  file_config.yaml
files/: example.yaml
logic/: common_utils.py  load_methods.py  sql_connect.py  xlxs_methods.py
logic/config/: app_config.py
